--- a/serenity-android-common/build.gradle
+++ b/serenity-android-common/build.gradle
@@ -38,6 +38,9 @@ android {
     versionName "1.0"
   }
 
+  sourceCompatibility = "1.8"
+  targetCompatibility = "1.8"
+
   sourceSets {
     main.java.srcDirs += 'src/main/kotlin'
     test.java.srcDirs += 'src/test/kotlin'
@@ -59,13 +62,13 @@ android {
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
   implementation project(':serenity-common')
-  implementation 'com.squareup.dagger:dagger:1.2.2'
+  implementation 'com.squareup.dagger:dagger:1.2.5'
   implementation 'org.greenrobot:eventbus:3.0.0'
   implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.2.70'
 
 
   implementation 'com.birbit:android-priority-jobqueue:2.0.1'
-  kapt 'com.squareup.dagger:dagger-compiler:1.2.2'
+  kapt 'com.squareup.dagger:dagger-compiler:1.2.5'
 
   testImplementation 'junit:junit:4.12'
 }
