--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -6,7 +6,6 @@ buildscript {
     google()
     jcenter()
     mavenCentral()
-
   }
   dependencies {
     classpath 'org.jetbrains.kotlin:kotlin-allopen:1.2.70'
@@ -57,7 +56,8 @@ android {
 
     minSdkVersion 21
     targetSdkVersion 27
-	multiDexEnabled true
+    multiDexEnabled true
+
   }
 
   aaptOptions {
@@ -89,6 +89,7 @@ android {
   buildTypes {
     debug {
       minifyEnabled false
+      testCoverageEnabled false
     }
     release {
       if (project.hasProperty("keystore")) {
@@ -112,13 +113,14 @@ android {
     unitTests.all {
       minHeapSize = "512m"
       maxHeapSize = "1024m"
+
+      jvmArgs '-noverify'
     }
   }
 
   compileOptions {
     incremental = false
   }
-
 }
 
 junitJacoco {
@@ -132,7 +134,6 @@ junitJacoco {
 
 dependencies {
 
-
   implementation group: 'com.github.bumptech.glide', name: 'okhttp3-integration', version: '1.5.0'
   implementation project(':plexapp-rest-library')
   implementation project(':subtitle-converter')
@@ -140,14 +141,14 @@ dependencies {
   implementation project(':serenity-android-common')
   implementation project(':serenity-common')
 
-  implementation ('com.google.android.exoplayer:exoplayer-core:r2.5.1') {
+  implementation('com.google.android.exoplayer:exoplayer-core:r2.5.1') {
     exclude module: 'support-annotations'
   }
-  implementation ('com.google.android.exoplayer:exoplayer-ui:r2.5.1') {
+  implementation('com.google.android.exoplayer:exoplayer-ui:r2.5.1') {
     exclude module: 'support-annotations'
   }
 
-  implementation ('com.google.android.exoplayer:extension-okhttp:r2.5.1') {
+  implementation('com.google.android.exoplayer:extension-okhttp:r2.5.1') {
     exclude module: 'support-annotations'
   }
 
@@ -167,19 +168,19 @@ dependencies {
   implementation 'com.android.support:support-v4:27.1.1'
   implementation 'com.googlecode.juniversalchardet:juniversalchardet:1.0.3'
   implementation 'com.mcxiaoke.volley:library:1.0.16'
-  implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.6.0'
+  implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.8.1'
   implementation 'com.squareup.dagger:dagger:1.2.2'
   implementation 'com.github.vganin:dpadaware-recyclerview:1.0.1'
   implementation 'com.jakewharton:butterknife:8.8.1'
-  implementation 'com.jakewharton.timber:timber:4.6.0'
+  implementation 'com.jakewharton.timber:timber:4.6.1'
   // https://mvnrepository.com/artifact/org.simpleframework/simple-xml
-  implementation ("org.simpleframework:simple-xml:2.7.1") {
+  implementation("org.simpleframework:simple-xml:2.7.1") {
     exclude group: 'stax'
     exclude group: 'xpp3'
   }
 
   testImplementation 'org.apache.commons:commons-lang3:3.7'
-  testImplementation('org.robolectric:robolectric:3.5.1') {
+  testImplementation('org.robolectric:robolectric:3.8') {
     exclude module: 'support-v4'
   }
   testImplementation('com.squareup.assertj:assertj-android:1.1.1') {
@@ -189,18 +190,19 @@ dependencies {
 
   testImplementation 'org.assertj:assertj-core:3.8.0'
   testImplementation 'junit:junit:4.12'
-  testImplementation 'org.robolectric:shadows-framework:3.5.1'
-  testImplementation 'org.robolectric:shadows-httpclient:3.5.1'
-  testImplementation 'org.robolectric:shadows-supportv4:3.5.1'
-  testImplementation 'org.robolectric:shadows-playservices:3.5.1'
+  testImplementation 'org.robolectric:shadows-supportv4:3.8'
+  testImplementation 'org.robolectric:shadows-framework:3.8'
+  testImplementation 'org.robolectric:shadowapi:3.8'
+  testImplementation 'org.robolectric:shadows-playservices:3.8'
   testImplementation 'org.khronos:opengl-api:gl1.1-android-2.1_r1'
-  testImplementation 'org.mockito:mockito-core:2.12.0'
+  testImplementation 'org.khronos:opengl-api:gl1.1-android-2.1_r1'
+  testImplementation 'org.mockito:mockito-core:2.22.0'
 
   testImplementation 'com.squareup.okhttp3:mockwebserver:3.8.1'
-  testImplementation 'commons-io:commons-io:2.4'
+  testImplementation 'commons-io:commons-io:2.6'
 
   kapt 'com.arello-mobile:moxy-compiler:1.5.3'
-  kapt 'com.squareup.dagger:dagger-compiler:1.2.2'
+  kapt 'com.squareup.dagger:dagger-compiler:1.2.5'
   kapt 'com.jakewharton:butterknife-compiler:8.8.1'
-  kaptTest 'com.squareup.dagger:dagger-compiler:1.2.2'
+  kaptTest 'com.squareup.dagger:dagger-compiler:1.2.5'
 }
