--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -173,6 +173,7 @@ dependencies {
   implementation 'com.github.vganin:dpadaware-recyclerview:1.0.1'
   implementation 'com.jakewharton:butterknife:8.8.1'
   implementation 'com.jakewharton.timber:timber:4.6.1'
+  implementation 'com.squareup.moshi:moshi-kotlin:1.6.0'
   // https://mvnrepository.com/artifact/org.simpleframework/simple-xml
   implementation("org.simpleframework:simple-xml:2.7.1") {
     exclude group: 'stax'
