--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,8 @@ jobs:
 
     steps:
       # Checkout the code as the first step.
-      - run: git clone https://github.com/NineWorlds/serenity-android.git --branch "$CIRCLE_BRANCH"
+      - run: git clone https://github.com/NineWorlds/serenity-android.git
+      - run: git checkout $CIRCLE_BRANCH
 
       # The next step will run the unit tests
       - android/run-tests:
